; ModuleID = '/home/carl/AnghaBench/poco/Foundation/wcelibcex-1.0/src/extr_wce_localtime.c_wceex_localtime.c'
source_filename = "/home/carl/AnghaBench/poco/Foundation/wcelibcex-1.0/src/extr_wce_localtime.c_wceex_localtime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }
%struct.TYPE_5__ = type { i32, i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.tm* @wceex_localtime(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.tm*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_5__, align 8
  store i32* %0, i32** %2, align 8
  store i64 0, i64* %4, align 8
  %6 = call i32 @GetTimeZoneInformation(%struct.TYPE_5__* %5)
  %7 = icmp ne i32 %6, -1
  br i1 %7, label %8, label %27

8:                                                ; preds = %1
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = mul nsw i32 %10, 60
  %12 = sext i32 %11 to i64
  %13 = load i64, i64* %4, align 8
  %14 = add nsw i64 %13, %12
  store i64 %14, i64* %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 2
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %26

19:                                               ; preds = %8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = mul nsw i32 %21, 60
  %23 = sext i32 %22 to i64
  %24 = load i64, i64* %4, align 8
  %25 = add nsw i64 %24, %23
  store i64 %25, i64* %4, align 8
  br label %26

26:                                               ; preds = %19, %8
  br label %27

27:                                               ; preds = %26, %1
  %28 = load i64, i64* %4, align 8
  %29 = mul nsw i64 %28, -1
  store i64 %29, i64* %4, align 8
  %30 = load i32*, i32** %2, align 8
  %31 = load i64, i64* %4, align 8
  %32 = call %struct.tm* @__wceex_offtime(i32* %30, i64 %31)
  store %struct.tm* %32, %struct.tm** %3, align 8
  %33 = load %struct.tm*, %struct.tm** %3, align 8
  ret %struct.tm* %33
}

declare dso_local i32 @GetTimeZoneInformation(%struct.TYPE_5__*) #1

declare dso_local %struct.tm* @__wceex_offtime(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
